# squid-tools

./: .gitignore  README.md  pyproject.toml
.claude/projects/-Users-julioamaragall-Documents-squid-tools/memory/: MEMORY.md  feedback_gui_functional_test.md  feedback_spec_testing_plan.md  feedback_superpowers_discipline.md  feedback_user_experience.md  feedback_viewer_paradigm_shift.md  feedback_viewer_polish_round2.md  project_squid_tools_context.md  project_upload_r2_data.md  user_julio_profile.md
.claude/skills/: cephla-algorithm-absorber.md
.github/workflows/: build.yml
core/: pyproject.toml
docs/context/: 00-project-state.md  01-collaboration-notes.md  02-brainstorming-highlights.md  03-feedback-log.md  04-cycle-history.md  05-bug-recurrences.md  06-glossary.md  07-concepts-inventory.md  README.md
docs/context/references/: algorithm-absorber-skill.md  user-facing-README.md
docs/context/references/plans/: 2026-04-09-gui.md  2026-04-09-polish.md  2026-04-09-viewer.md  2026-04-10-continuous-viewer.md
docs/context/references/specs/: 2026-04-09-squid-tools-v1-design.md  2026-04-19-async-tile-loading-design.md  2026-04-20-3d-volume-design.md  2026-04-20-gpu-compositing-design.md  2026-04-20-r2-hosting-design.md  2026-04-21-v1-dependency-management.md  2026-04-21-v2-design.md
docs/superpowers/audits/: 2026-04-21-reinvention-audit.md
docs/superpowers/plans/: 2026-04-07-squid-tools-implementation.md  2026-04-09-distribution.md  2026-04-09-foundation.md  2026-04-09-restructure.md  2026-04-09-stitcher.md  2026-04-09-wiring.md  2026-04-10-viewer-v2.md  2026-04-16-production-logger.md  2026-04-16-selection-live-processing.md  2026-04-19-async-tile-loading.md  2026-04-20-gpu-compositing.md  2026-04-20-multiscale-pyramid.md
docs/superpowers/specs/: 2026-04-07-squid-tools-design.md  2026-04-16-production-logger-design.md  2026-04-16-selection-live-processing-design.md  2026-04-19-multiscale-pyramid-design.md  2026-04-21-v1-dependency-management.md  2026-04-21-v2-design.md  2026-04-26-ome-tiff-reader-squid-output-design.md  2026-04-26-streaming-region-ops-v2.md  2026-04-26-viewer-cache-split-design.md
installer/: entry.py  smoke_test.py  squid_tools.spec
processing/flatfield/: pyproject.toml
processing/stitching/: pyproject.toml
scripts/: build_browser_bundle.py  upload_acquisition_to_r2.py  view_volume.py
squid_tools/: __init__.py  __main__.py  logger.py
squid_tools/core/: __init__.py  cache.py  data_model.py  gpu.py  gui_manifest.py  handle_pool.py  pipeline.py  registry.py  sidecar.py  test_data.py
squid_tools/core/readers/: __init__.py  _squid_metadata.py  base.py  detect.py  individual.py  ome_tiff.py  zarr_reader.py
squid_tools/gui/: __init__.py  algorithm_runner.py  app.py  borders.py  controller.py  controls.py  dev_panel.py  embed.py  log_panel.py  mosaic.py  processing_tabs.py  region_selector.py  style.py  theme.py  viewer.py  wellplate.py
squid_tools/plugins/: background.py  base.py  decon.py  flatfield.py  stitcher.py
squid_tools/processing/: __init__.py  base.py
squid_tools/processing/acns/: __init__.py  gui_manifest.yaml  plugin.py
squid_tools/processing/bgsub/: __init__.py  gui_manifest.yaml  plugin.py
squid_tools/processing/decon/: __init__.py  gui_manifest.yaml  plugin.py
squid_tools/processing/flatfield/: __init__.py  correction.py  plugin.py
squid_tools/processing/phase/: __init__.py  gui_manifest.yaml  plugin.py
squid_tools/processing/stitching/: __init__.py  fusion.py  gui_manifest.yaml  optimization.py  plugin.py  registration.py  utils.py
squid_tools/processing/stitching/_tilefusion/: core.py  fusion.py  optimization.py  registration.py  utils.py
squid_tools/processing/stitching/_tilefusion/io/: __init__.py  individual_tiffs.py  ome_tiff_tiles.py  zarr.py
squid_tools/remote/: r2_client.py
squid_tools/viewer/: __init__.py  canvas.py  colormaps.py  compositor.py  data_manager.py  pyramid.py  selection.py  spatial_index.py  square_container.py  tile_loader.py  viewport_engine.py  volume_canvas.py  widget.py  widget_3d.py
squid_tools/webdemo/: __init__.py  viewer.html
tests/: conftest.py
tests/fixtures/: generate_fixtures.py
tests/integration/: conftest.py  test_all_integrations.py  test_background.py  test_decon.py  test_end_to_end.py  test_flatfield.py  test_gui_smoke.py  test_logger_integration.py  test_mosaic.py  test_real_data.py  test_selection_workflow.py  test_stitch_e2e.py  test_stitch_live.py  test_stitcher.py
tests/unit/: test_algorithm_runner.py  test_build_browser_bundle.py  test_cache.py  test_canvas_selection.py  test_compositor.py  test_controller.py  test_data_model.py  test_dev_mode.py  test_entry.py  test_flatfield_run_live.py  test_gpu_detection.py  test_gui_controls.py  test_gui_log_panel.py  test_gui_manifest.py  test_gui_processing_tabs.py  test_gui_region_selector.py  test_gui_style.py  test_handle_pool.py  test_logger.py  test_mosaic.py  test_pipeline.py  test_pixel_size.py  test_plugin_acns.py  test_plugin_bgsub.py  test_plugin_decon.py  test_plugin_flatfield.py  test_plugin_phase.py  test_plugin_run_live.py  test_processing_tabs_runbutton.py  test_processing_toggles.py  test_pyramid.py  test_r2_client.py  test_readers.py  test_registry.py  test_selection_state.py  test_sidecar.py  test_spatial_index.py  test_squid_metadata.py  test_stitcher_run_live.py  test_stitching_fusion.py  (+14 more)
viewer/: pyproject.toml
