[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "squid-tools-core"
version = "0.1.0"
description = "Core data model and readers for squid-tools"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10",
    "numpy>=1.24",
    "dask[array]>=2024.1",
    "tifffile>=2024.1",
    "pyyaml>=6.0",
    "zarr>=2.16",
]
