[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "squid-tools-stitching"
version = "0.1.0"
description = "Tile registration and fusion for squid-tools (absorbed from TileFusion)"
requires-python = ">=3.10"
dependencies = [
    "squid-tools-core>=0.1.0",
    "numba>=0.59",
    "scikit-image>=0.22",
    "scipy>=1.10",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13.0", "cucim>=23.0"]

[project.entry-points."squid_tools.plugins"]
stitcher = "squid_tools.processing.stitching.plugin:StitcherPlugin"
